# t265_json

./: CMakeLists.txt  EXTRA.md  PROJECT_ARCHITECTURE.md  README.md  install_ROS.sh  install_librealsense.sh  install_realsense_on_raspberry.sh  install_ros_melodic_and_realsense_drivers_for_ubuntu.sh  package.xml
bagfile/: 2020-09-25-17-29-33.bag
docs/documentation/: TEST_REALSENSE.md
install_scripts/: install_ROS.sh  install_librealsense.sh
junk/: json_script.py  jsonlisten.py
launch/: .demo_t265.launch.swp  demo_t265.launch  demo_t265_with_prerecordeddata.launch  t265_node_without_rviz.launch
msg/: JSON.msg
output/: .csv  Bhatia.csv  Bhatiasroom.csv  Bhatiasroomdisga.csv  C-19:39:28.csv  C-19:42:31.csv  C.csv  C19:38:18.csv  ChDiljendrajithom.csv  Chris Room.csv  ChrisRoom.csv  Chrisdistance.csv  Chrisroom.csv  Chrisroomdistance.csv  Chrisroomdistances.csv  DilsRoom.csv  DilsRoom_distance_based_trigger.csv  Turanroom.csv  chri_room.csv  chris room.csv  user_data.csv  user_data.csv~  user_data.xls
rviz/: t265.rviz
scripts/: ASYNC_SERVER_CLASS.py  FREE_PORT.sh  SERVER_CLASS.py  SOCKETIO_SERVER.py  T265_JSON_CLASS.py  YASH_SOCKETIO.py  client.py  echo.py  listener.py  odom_to_path.py  pyServer.py  server.py  socket_echo_server.py  start_stop.py  user_data.csv
scripts/nOT_USED_SCRIPTS/: ASYNC_SERVER_CLASS.py
scripts/service/: server.py  sos_service_client.py
scripts/thingspeak/: thingspeak_cpu_loop.py
scripts/unused/: echo.py  server.py  (+1 more)
stand_alone_testing_of_socket/: async_server.py  echo.py  socket_echo_server_stripped.py  test.py
(+5 files in other folders)
